# gli_py

./: .gitignore  README.md  error_codes.json  examples.md  pyproject.toml  requirements.txt  setup.py
gli-py/: __init__.py
gli_py/: __init__.py  cache.py  error_codes.json  error_handling.py  examples.md  glinet.py
tests/: test_glinet.py
